test/expected/prepass_missing.out
[CompoundList]
  [CompoundListCondition, None]
    [SimpleCommand "nosuchcmd_xyz"]
  [CompoundListCondition, None]
    [SimpleCommand "echo" "after"]
[Word
  Unquoted "nosuchcmd_xyz"
]
[Word
  Unquoted "echo"
]
[Word
  Unquoted "after"
]
shit: 2:1: error: Command 'nosuchcmd_xyz' was not found.
     2 |  nosuchcmd_xyz
       |  ^~~~~~~~~~~~~ here.
[Code 1]
